envoy/config/envoy.yaml
admin:
  access_log_path: /envoy/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: http_alt
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: prometheus }
              - match: { prefix: "/*" }
                route: { cluster: prometheus }
          http_filters:
          - name: envoy.filters.http.router

  clusters:
  - name: prometheus
    connect_timeout: 1.0s
    type: logical_dns
    lb_policy: round_robin
    hosts:
    - { socket_address: { address: prometheus, port_value: 9090 }}
